<resources>
    <string name="app_name">Audio Nirvana</string>
    <string name="title_activity_earphone_questions">EarphoneQuestionsActivity</string>

    <string name="btn_analyze">Analyze</string>
    <string name="btn_login">Login</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_earphones">Earphones</string>
    <string name="btn_btSpeakers">BT Speakers</string>
    <string name="btn_aboutUs">About Us</string>

    <!--Earphone Questions-->
    <string name="ep_q1">1. So.. Earphones or Headphones?</string>
    <string name="ep_q2">2. How do you take your audio?</string>
    <string name="ep_q3">3. Are you a professional working in an audio related field? (Editor/ Composer)?</string>
    <string name="ep_q4">4. Hate having to listen to your music and external noise remixed?</string>
    <string name="ep_q5">5. Do you travel a lot?</string>
    <string name="ep_q6">6. Wide spread sound or Tight beats?</string>
    <string name="ep_q7">7. Do you hate cables?</string>
    <string name="ep_q8">8. How long are your listening sessions?</string>
    <string name="ep_q9">9. With what would you use these?</string>
    <string name="ep_q10">10. How careful are you in using devices?</string>
    <string name="ep_q11">11. How much are you willing to pay?</string>

    <!--Earphone Answers-->
    <string name="ep_q1_a1">Earphones</string>
    <string name="ep_q1_a2">Headphones</string>
    <string name="ep_q1_a3">Any</string>

    <string name="ep_q2_a1">Natural &amp; clear</string>
    <string name="ep_q2_a2">Punchy &amp; bassy</string>
    <string name="ep_q2_a3">Anything really</string>

    <string name="ep_q3_a1">Yes</string>
    <string name="ep_q3_a2">No</string>
    <string name="ep_q3_a3">Kind of</string>

    <string name="ep_q4_a1">Yessss!</string>
    <string name="ep_q4_a2">Somewhat</string>
    <string name="ep_q4_a3">No</string>

    <string name="ep_q5_a1">Yes</string>
    <string name="ep_q5_a2">No</string>
    <string name="ep_q5_a3">Sometimes</string>

    <string name="ep_q6_a1">Wide</string>
    <string name="ep_q6_a2">Tight</string>
    <string name="ep_q6_a3">Don’t care</string>

    <string name="ep_q7_a1">Hate them</string>
    <string name="ep_q7_a2">Need them</string>
    <string name="ep_q7_a3">No issue either way</string>

    <string name="ep_q8_a1">Short</string>
    <string name="ep_q8_a2">Somewhere between</string>
    <string name="ep_q8_a3">Long</string>

    <string name="ep_q9_a1">Mobile phone</string>
    <string name="ep_q9_a2">Dedicated audio player</string>
    <string name="ep_q9_a3">Amplifier/PC</string>

    <string name="ep_q10_a1">Very</string>
    <string name="ep_q10_a2">Somewhat</string>
    <string name="ep_q10_a3">Not at all</string>

    <string name="ep_q11_a1">Not much</string>
    <string name="ep_q11_a2">Somewhat</string>
    <string name="ep_q11_a3">A lot</string>

    <!--Earphone Answer Tags-->
    <string name="ep_q1_t1">earphone</string>
    <string name="ep_q1_t2">headphone</string>
    <string name="ep_q1_t3">ANY</string>

    <string name="ep_q2_t1">natural</string>
    <string name="ep_q2_t2">punchy</string>
    <string name="ep_q2_t3">ANY</string>

    <string name="ep_q3_t1">high</string>
    <string name="ep_q3_t2">!high</string>
    <string name="ep_q3_t3">medium</string>

    <string name="ep_q4_t1">active</string>
    <string name="ep_q4_t2">passive</string>
    <string name="ep_q4_t3">ANY</string>

    <string name="ep_q5_t1">yes</string>
    <string name="ep_q5_t2">ANY</string>
    <string name="ep_q5_t3">ANY</string>

    <string name="ep_q6_t1">open</string>
    <string name="ep_q6_t2">closed</string>
    <string name="ep_q6_t3">ANY</string>

    <string name="ep_q7_t1">yes</string>
    <string name="ep_q7_t2">no</string>
    <string name="ep_q7_t3">ANY</string>

    <string name="ep_q8_t1">ANY</string>
    <string name="ep_q8_t2">!low</string>
    <string name="ep_q8_t3">high</string>

    <string name="ep_q9_t1">32</string>
    <string name="ep_q9_t2">50</string>
    <string name="ep_q9_t3">ANY</string>

    <string name="ep_q10_t1">ANY</string>
    <string name="ep_q10_t2">!low</string>
    <string name="ep_q10_t3">high</string>

    <string name="ep_q11_t1">low</string>
    <string name="ep_q11_t2">!high</string>
    <string name="ep_q11_t3">ANY</string>

    <!--Bluetooth Speaker Questions-->
    <string name="bts_q1">1. Why do you need this?</string>
    <string name="bts_q2">2. How long are your listening sessions?</string>
    <string name="bts_q3">3. Plan on using this around liquids… or the pool?</string>
    <string name="bts_q4">4. How careful are you in using devices?</string>
    <string name="bts_q5">5. Are you that person who walks around while listening to something?</string>
    <string name="bts_q6">6. How much are you willing to pay?</string>

    <!--Bluetooth Speaker Answers-->
    <string name="bts_q1_a1">Earbuds</string>
    <string name="bts_q1_a2">Headphones</string>
    <string name="bts_q1_a3">Any</string>

    <string name="bts_q2_a1">Natural &amp; clear</string>
    <string name="bts_q2_a2">Punchy &amp; bassy</string>
    <string name="bts_q2_a3">Anything really</string>

    <string name="bts_q3_a1">Yes</string>
    <string name="bts_q3_a2">No</string>
    <string name="bts_q3_a3">Kind of</string>

    <string name="bts_q4_a1">Yessss!</string>
    <string name="bts_q4_a2">Somewhat</string>
    <string name="bts_q4_a3">No</string>

    <string name="bts_q5_a1">Yes</string>
    <string name="bts_q5_a2">No</string>
    <string name="bts_q5_a3">Sometimes</string>

    <string name="bts_q6_a1">Wide</string>
    <string name="bts_q6_a2">Tight</string>
    <string name="bts_q6_a3">Don’t care</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_bluetooth_speaker">BluetoothSpeakerActivity</string>
</resources>
